--- a/README
+++ b/README
@@ -14,9 +14,23 @@
 2. 命令行输入 sudo apt-get update ，然后输入
 sudo apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
 
-3. git clone https://github.com/coolsnowwolf/lede 命令下载好源代码，然后 cd lede 进入目录
+3. git clone https://github.com/Lienol/lean-lede 命令下载好源代码，然后 cd lede 进入目录
 
 4. ./scripts/feeds update -a 
+   rm -rf feeds/lienol/lienol/v2ray
+   rm -rf feeds/lienol/lienol/openssl1.1
+   rm -rf feeds/lienol/lienol/trojan
+   rm -rf feeds/lienol/lienol/ipt2socks
+   rm -rf feeds/lienol/lienol/shadowsocks-libev-new
+   rm -rf feeds/lienol/lienol/shadowsocksr-libev
+   rm -rf feeds/lienol/lienol/pdnsd-alt
+   rm -rf feeds/lienol/package/verysync
+   rm -rf feeds/lienol/lienol/luci-app-verysync
+   rm -rf package/lean/kcptun
+   rm -rf package/lean/luci-app-kodexplorer
+   rm -rf package/lean/luci-app-pppoe-relay
+   rm -rf package/lean/luci-app-pptp-server
+   rm -rf package/lean/luci-app-v2ray-server
    ./scripts/feeds install -a
    make menuconfig 
 
